<resources>
    <string name="App_name">Modbus+645</string>
    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>
    <string name="nav_header_title">安卓开发工具</string>
    <string name="nav_header_desc">导航页眉</string>
    <string name="action_settings">设置</string>
    <string name="TableText">表号:</string>
    <string name="menu_home">首页</string>
    <string name="menu_gallery">Modbus串口通信</string>
    <string name="menu_645">DLT645串口通信</string>
    <string name="menu_share">分享</string>
    <string name="menu_tools">关于</string>
    <string name="Baud">波特率</string>
    <string name="DataBits">数据位</string>
    <string name="CheckDigit">校验位</string>
    <string name="stopBits">停止位</string>
    <string name="OpenPort">发送数据</string>
    <string name="Id">设备地址</string>
    <string name="address">开始寄存器</string>
    <string name="length">寄存器个数</string>
    <string name="EmptyText">清空数据</string>
    <string name="FunctionCore">功能码</string>
    <string name="StartPort">开启串口</string>
    <string name="StopPort">关闭串口</string>
    <string name="Derive">复制至剪贴板</string>
    <string name="Regards">关于</string>
    <string name="StopData">停止发送</string>
    <string name="Group">官方反馈群qq交流群：808513813或者点击二维码保存至相册，有任何问题都可以在群里面反馈交流!</string>
    <string name="Save">保存</string>
    <string name="AutomaticSending">自动发送</string>
    <string name="Analysis">解析数据</string>
    <string name="DataUnit">数据单位</string>
    <string name="DataLengit">数据长度</string>
    <string name="MeterReading">抄表</string>
    <string name="StopReading">停止抄表</string>
    <string name="deselectAll">取消全选</string>
    <string name="checkAll">全选</string>
    <string name="SendNumber">发送次数：</string>
    <string name="A">A相</string>
    <string name="B">B相</string>
    <string name="C">C相</string>
    <string name="examineTabNumber">查看表号</string>
    <string name="ActivePpower">有功电量</string>
</resources>
