<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="73dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="波特率:"
                        android:textColor="#44BDED"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/Baud"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:entries="@array/Baud"
                        android:prompt="@string/Baud"
                        android:spinnerMode="dialog" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/CheckDigit"
                        android:textColor="#F5684A"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/CheckDigit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/CheckDigit"
                        android:prompt="@string/CheckDigit" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="73dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/DataBits"
                        android:textColor="#F5684A"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/DataBits"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:entries="@array/DataBits"
                        android:prompt="@string/DataBits" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stopBits"
                        android:textColor="#F5684A"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/stopBits"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:entries="@array/stopBits"
                        android:prompt="@string/stopBits" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/SavePorts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Save" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>